// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers invoiceReducer should handle ADD_INVOICE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "cancelInvoiceError": null,
    "createInvoiceError": null,
    "invoice": null,
    "invoices": Array [],
    "isInvoiceCancelling": false,
-   "isInvoiceCreating": false,
+   "isInvoiceCreating": true,
  }
`;

exports[`reducers invoiceReducer should handle INVOICE_FAILED 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "cancelInvoiceError": null,
-   "createInvoiceError": null,
+   "createInvoiceError": "some error",
    "invoice": null,
    "invoices": Array [],
    "isInvoiceCancelling": false,
    "isInvoiceCreating": false,
  }
`;

exports[`reducers invoiceReducer should handle INVOICE_SUCCESSFUL 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`reducers invoiceReducer should handle RECEIVE_INVOICES 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "cancelInvoiceError": null,
    "createInvoiceError": null,
    "invoice": null,
-   "invoices": Array [],
+   "invoices": Array [
+     Object {
+       "addIndex": 1,
+       "rHash": "123",
+     },
+     Object {
+       "addIndex": 2,
+       "rHash": "456",
+     },
+   ],
    "isInvoiceCancelling": false,
    "isInvoiceCreating": false,
  }
`;

exports[`reducers invoiceReducer should handle SET_INVOICE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "cancelInvoiceError": null,
    "createInvoiceError": null,
-   "invoice": null,
+   "invoice": Object {
+     "rHash": "123",
+   },
    "invoices": Array [],
    "isInvoiceCancelling": false,
    "isInvoiceCreating": false,
  }
`;

exports[`reducers invoiceReducer should handle UPDATE_INVOICE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "cancelInvoiceError": null,
    "createInvoiceError": null,
    "invoice": null,
-   "invoices": Array [],
+   "invoices": Array [
+     Object {
+       "rHash": "123",
+     },
+   ],
    "isInvoiceCancelling": false,
    "isInvoiceCreating": false,
  }
`;

exports[`reducers invoiceReducer should handle initial state 1`] = `
Object {
  "cancelInvoiceError": null,
  "createInvoiceError": null,
  "invoice": null,
  "invoices": Array [],
  "isInvoiceCancelling": false,
  "isInvoiceCreating": false,
}
`;
